# taco_file_parser

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: archive.hpp  file.hpp  help.hpp  marker.hpp  parse.hpp  point.hpp  trail.hpp
src/: archive.cpp  file.cpp  help.cpp  main.cpp  marker.cpp  parse.cpp  trail.cpp
